--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,26 @@ body{
     font-family: "Roboto", sans-serif;
     color: var(--slate-color);
 }
+.container{
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+img {
+    display: block;
+}
+.head{
+    border-bottom: 1px solid #e7e9fc
+}
+.head-box{
+    display: flex;
+    align-items: center;
+}
+
+.navigation{
+    display: flex; 
+    align-items: center;
+}
 .logo{
     font-family: "Raleway", sans-serif;
     font-weight: 800;
@@ -21,6 +41,7 @@ body{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color:var(--iris-color);
+    margin-right: 76px;
 }
 .link{
     text-decoration: none
@@ -35,13 +56,22 @@ body{
 .contact{
     font-style: normal
 }
+.nav-list{
+    display: flex;
+    gap: 40px;
+}
 .pages{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--navy-blye-color);
-
+    padding-top: 24px; 
+    padding-bottom: 24px;
+}
+.contact-ul{
+    display: flex;
+    gap: 40px;
 }
 .contact-list{
     font-size: 16px;
