--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --ocean-color:#404bbf;
     --white-color:#fff;
     --cloud-color:#f4f4fd;
+    --cornflower-color:#e7e9fc;
 }
 body{
     background-color: var(--white-color);
@@ -21,7 +22,7 @@ img {
     display: block;
 }
 .head{
-    border-bottom: 1px solid #e7e9fc
+    border-bottom: 1px solid var(--cornflower-color)
 }
 .head-box{
     display: flex;
@@ -90,6 +91,7 @@ img {
     background-color:var(--navy-blye-color);
     padding-top: 188px;
     padding-bottom: 188px;
+  
 }
 .heading{
     font-size: 56px;
@@ -123,7 +125,16 @@ img {
     padding-bottom: 120px;
 }
 .hidden{
-    visibility : hidden;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .sc-two-ul{
     display: flex;
@@ -216,6 +227,16 @@ img {
 .footer-studio{
     color: var(--cloud-color);
 }
+.section-main{
+    padding-top: 96px; 
+    padding-bottom: 120px;
+}
+.filter-btn{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 72px;
+}
 .btn{
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -225,9 +246,15 @@ img {
     color:var(--iris-color);
     background-color:var(--cloud-color);
     cursor: pointer;
+    padding-top: 12px;
+    padding-bottom: 12px; 
+    padding-left: 24px; 
+    padding-right: 24px;
+    border: 1px solid var(--cornflower-color);
+    border-radius: 4px;
 }
 .btn:hover, .btn:focus{
     color: var(--white-color);
     background-color: var(--ocean-color) ;
-
+    border: 1px solid transparent;
 }
