--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,7 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color:var(--navy-blye-color);
+    margin-top: 0;
 }
 .sc-three-title{
     margin-bottom: 72px
@@ -189,7 +190,7 @@ img {
     padding: 0;
 }
 .sc-three-list{
-    width: calc((100% - 72px) / 4); 
+    width: calc((100% - 48px) / 3); 
 }
 .section-four{
     background-color: var(--cloud-color);
@@ -198,6 +199,7 @@ img {
 }
 .sc-four-title{
     margin-bottom: 72px;
+    
 }
 .sc-four-ul{
     display: flex; 
@@ -281,4 +283,10 @@ img {
 }
 .catalog-list{
     width: calc((100% - 48px) / 3);
+}
+.catalog-item{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
 }
