--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ img {
     display: block;
 }
 .head{
-    border-bottom: 1px solid var(--cornflower-color)
+    border-bottom: 1px solid var(--cornflower-color);
 }
 .head-box{
     display: flex;
@@ -275,6 +275,7 @@ img {
     background-color: var(--ocean-color) ;
     border: 1px solid transparent;
 }
+
 .catalog-ul{
     display: flex;
     flex-wrap: wrap;
@@ -282,11 +283,14 @@ img {
     row-gap: 48px
 }
 .catalog-list{
-    width: calc((100% - 48px) / 3);
+    flex-basis: calc((100% - 48px) / 3);
 }
 .catalog-item{
     padding: 32px 16px;
-    border: 1px solid #e7e9fc;
+    border: 1px solid var(--cornflower-color);
     border-top: none;
-    margin-bottom: 8px;
+ 
+}
+.catalog-title{
+    margin-bottom: 8px
 }
