--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,15 @@
     --cloud-color:#f4f4fd;
     --cornflower-color:#e7e9fc;
 }
+
 body{
     background-color: var(--white-color);
     font-family: "Roboto", sans-serif;
     color: var(--slate-color);
+}
+p{
+    margin: 0;
+    padding: 0;
 }
 .container{
     width: 1158px;
@@ -109,6 +114,7 @@ img {
     max-width: 496px; 
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 48px;
 }
 .button-one{
     background-color: var(--iris-color);
@@ -162,6 +168,8 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color:var(--navy-blye-color);
+    margin: 0;
+    padding: 0;
 }
 .sc-two-title{
     margin-bottom: 8px;
@@ -170,6 +178,7 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+
 }
 .section-three{
     padding-bottom: 120px;
