--- a/css/styles.css
+++ b/css/styles.css
@@ -15,15 +15,15 @@ body{
     color: var(--slate-color);
 }
 p{
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding: 0;
 }
 .container{
     width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto; 
-    margin-right: auto;
+    padding: 0 15px;
+    margin: 0 auto;
+    
 }
 img {
     display: block;
@@ -34,8 +34,7 @@ img {
 .head-box{
     display: flex;
     align-items: center;
-    padding-top: 24px;
-    padding-bottom: 24px;
+
 }
 
 .navigation{
@@ -58,8 +57,7 @@ img {
 }
 .list{
     list-style: none;
-    margin: 0;
-    padding: 0;
+
 }
 
 .colored-studio{
@@ -72,7 +70,7 @@ img {
 .nav-list{
     display: flex;
     gap: 40px;
-
+    padding: 0;
    
 }
 .pages{
@@ -81,6 +79,8 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color:var(--navy-blye-color);
+    padding-top: 24px;
+    padding-bottom: 24px;
 
 }
 .contact-ul{
@@ -158,7 +158,8 @@ img {
 .sc-two-ul{
     display: flex;
     gap: 24px;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding: 0;
 }
 .sc-two-lists{
@@ -170,7 +171,8 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color:var(--navy-blye-color);
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding: 0;
 }
 .sc-two-title{
@@ -200,7 +202,8 @@ img {
 .sc-three-ul{
     display: flex; 
     gap: 24px;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding: 0;
 }
 .sc-three-list{
@@ -297,7 +300,10 @@ img {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px; 
-    row-gap: 48px
+    row-gap: 48px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 0;
 }
 .catalog-list{
     flex-basis: calc((100% - 48px) / 3);
