--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ img {
 .nav-list{
     display: flex;
     gap: 40px;
+    padding: 0;
 
    
 }
@@ -92,6 +93,7 @@ img {
 .contact-ul{
     display: flex;
     gap: 40px;
+    padding: 0;
 }
 .contact-list{
     font-size: 16px;
@@ -281,6 +283,8 @@ img {
     justify-content: center;
     gap: 24px;
     margin-bottom: 72px;
+    margin-top: 0;
+    padding: 0;
 }
 .btn{
     font-family: "Roboto", sans-serif;
