--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ h2,
 h3,
 h4,
 p,
+
 li{
     margin-top: 0;
     margin-bottom: 0;
@@ -94,6 +95,7 @@ img {
     display: flex;
     gap: 40px;
     padding: 0;
+    margin: 0;
 }
 .contact-list{
     font-size: 16px;
