--- a/css/styles.css
+++ b/css/styles.css
@@ -77,9 +77,11 @@ img {
 .nav-list{
     display: flex;
     gap: 40px;
-    padding: 0;
+    padding-left: 0;
+    margin: 0;
 }
 .pages{
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
